# xxh3

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  PR_BODY.md  README.md  deny.toml  justfile  py_publish.sh  pyproject.toml
.github/workflows/: ci.yml
benches/: benchmark.rs  benchmark_128.rs  benchmark_64.rs
crates/xxh3-python/: Cargo.toml  py_publish.sh  pyproject.toml
crates/xxh3-python/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_xxh3.rs
src/: lib.rs  xxh3.rs
test/: __init__.py
xxhash_reference/: Cargo.toml  build.rs
xxhash_reference/src/: lib.rs
